// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component: Checkbox -> should render checked 1`] = `
.c7 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c0:disabled {
  opacity: 0.5;
}

.c1 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: block;
  color: #646464;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  color: inherit;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  width: 100%;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #949494;
  color: #ffffff;
  cursor: pointer;
}

.c6:disabled {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c6:focus,
.c6:focus-visible {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
  outline-offset: -2px;
}

.c6::-webkit-input-placeholder {
  color: #646464;
}

.c6::-moz-placeholder {
  color: #646464;
}

.c6:-ms-input-placeholder {
  color: #646464;
}

.c6::placeholder {
  color: #646464;
}

.c9 {
  display: none;
}

.c11 {
  display: none;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4:disabled ~ .c5,
.c4:disabled:indeterminate ~ .c5 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c4:focus-visible ~ .c5 {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
}

.c4:checked ~ .c5,
.c4:indeterminate ~ .c5 {
  border-color: #121212;
  background-color: #121212;
}

.c4:hover:not(:checked):not(:indeterminate):not(:disabled) ~ .c5 {
  border-color: #024ddf;
  border-width: 2px;
  background-color: #ffffff;
}

.c4:active:not(:checked):not(:indeterminate):not(:disabled) ~ .c5 {
  border-color: #0139a7;
  border-width: 2px;
}

.c4:hover:not(:disabled) ~ .c5,
.c4:indeterminate:hover:not(:disabled) ~ .c5 {
  border-color: #0139a7;
  background-color: #0139a7;
}

.c4:disabled:checked ~ .c5,
.c4:disabled:indeterminate ~ .c5 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c4:checked ~ .c5 > .c8 {
  display: block;
}

.c4:indeterminate ~ .c5 > .c10 {
  display: block;
}

.c13 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #121212;
}

.c2 {
  font-size: var(--rainier-font-size,16px);
  line-height: var(--rainier-line-height,22px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: -8px;
  color: #121212;
}

.c2 > * {
  padding: 8px;
}

.c12 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-top: auto;
  margin-bottom: auto;
  padding-inline-start: 4px;
}

.c3 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

@supports not selector(:focus-visible) {
  .c4:focus ~ .c5 {
    outline-width: 2px;
    outline-style: solid;
    outline-color: #024ddf;
    outline-offset: 2px;
  }
}

<div>
  <div
    class="c0"
    id="test-checkbox"
  >
    <label
      class="c1 c2"
      for="test-checkbox-input"
    >
      <div
        class="c3"
      >
        <input
          aria-describedby="test-checkbox-error"
          aria-invalid="false"
          checked=""
          class="c4"
          id="test-checkbox-input"
          type="checkbox"
        />
        <span
          class="c5 c6"
        >
          <svg
            aria-hidden="true"
            class="c7 c8 c9"
            focusable="false"
            height="73%"
            viewBox="0 0 24 24"
            width="73%"
          >
            <path
              d="M23 3.2 7 22l-6-5.94 1.41-1.32 4.46 4.42L21.47 2z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="c7 c10 c11"
            focusable="false"
            height="73%"
            viewBox="0 0 24 24"
            width="73%"
          >
            <path
              d="M1 11.25h22v1.5H1z"
            />
          </svg>
        </span>
      </div>
      <span
        class="c12"
      >
        Label
      </span>
    </label>
    <div
      class="c13"
      id="test-checkbox-error"
    />
  </div>
</div>
`;

exports[`Component: Checkbox -> should render correctly 1`] = `
.c7 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c0:disabled {
  opacity: 0.5;
}

.c1 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: block;
  color: #646464;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  color: inherit;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  width: 100%;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #949494;
  color: #ffffff;
  cursor: pointer;
}

.c6:disabled {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c6:focus,
.c6:focus-visible {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
  outline-offset: -2px;
}

.c6::-webkit-input-placeholder {
  color: #646464;
}

.c6::-moz-placeholder {
  color: #646464;
}

.c6:-ms-input-placeholder {
  color: #646464;
}

.c6::placeholder {
  color: #646464;
}

.c9 {
  display: none;
}

.c11 {
  display: none;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4:disabled ~ .c5,
.c4:disabled:indeterminate ~ .c5 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c4:focus-visible ~ .c5 {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
}

.c4:checked ~ .c5,
.c4:indeterminate ~ .c5 {
  border-color: #121212;
  background-color: #121212;
}

.c4:hover:not(:checked):not(:indeterminate):not(:disabled) ~ .c5 {
  border-color: #024ddf;
  border-width: 2px;
  background-color: #ffffff;
}

.c4:active:not(:checked):not(:indeterminate):not(:disabled) ~ .c5 {
  border-color: #0139a7;
  border-width: 2px;
}

.c4:hover:not(:disabled) ~ .c5,
.c4:indeterminate:hover:not(:disabled) ~ .c5 {
  border-color: #0139a7;
  background-color: #0139a7;
}

.c4:disabled:checked ~ .c5,
.c4:disabled:indeterminate ~ .c5 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c4:checked ~ .c5 > .c8 {
  display: block;
}

.c4:indeterminate ~ .c5 > .c10 {
  display: block;
}

.c13 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #121212;
}

.c2 {
  font-size: var(--rainier-font-size,16px);
  line-height: var(--rainier-line-height,22px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: -8px;
  color: #121212;
}

.c2 > * {
  padding: 8px;
}

.c12 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-top: auto;
  margin-bottom: auto;
  padding-inline-start: 4px;
}

.c3 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

@supports not selector(:focus-visible) {
  .c4:focus ~ .c5 {
    outline-width: 2px;
    outline-style: solid;
    outline-color: #024ddf;
    outline-offset: 2px;
  }
}

<div>
  <div
    class="c0"
    id="test-checkbox"
  >
    <label
      class="c1 c2"
      for="test-checkbox-input"
    >
      <div
        class="c3"
      >
        <input
          aria-describedby="test-checkbox-error"
          aria-invalid="false"
          class="c4"
          id="test-checkbox-input"
          type="checkbox"
        />
        <span
          class="c5 c6"
        >
          <svg
            aria-hidden="true"
            class="c7 c8 c9"
            focusable="false"
            height="73%"
            viewBox="0 0 24 24"
            width="73%"
          >
            <path
              d="M23 3.2 7 22l-6-5.94 1.41-1.32 4.46 4.42L21.47 2z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="c7 c10 c11"
            focusable="false"
            height="73%"
            viewBox="0 0 24 24"
            width="73%"
          >
            <path
              d="M1 11.25h22v1.5H1z"
            />
          </svg>
        </span>
      </div>
      <span
        class="c12"
      >
        Label
      </span>
    </label>
    <div
      class="c13"
      id="test-checkbox-error"
    />
  </div>
</div>
`;

exports[`Component: Checkbox -> should render disabled 1`] = `
.c7 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c0:disabled {
  opacity: 0.5;
}

.c1 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: block;
  color: #646464;
  color: #949494;
  cursor: not-allowed;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  color: inherit;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  width: 100%;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #949494;
  color: #ffffff;
  cursor: pointer;
}

.c6:disabled {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c6:focus,
.c6:focus-visible {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
  outline-offset: -2px;
}

.c6::-webkit-input-placeholder {
  color: #646464;
}

.c6::-moz-placeholder {
  color: #646464;
}

.c6:-ms-input-placeholder {
  color: #646464;
}

.c6::placeholder {
  color: #646464;
}

.c9 {
  display: none;
}

.c11 {
  display: none;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4:disabled ~ .c5,
.c4:disabled:indeterminate ~ .c5 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c4:focus-visible ~ .c5 {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
}

.c4:checked ~ .c5,
.c4:indeterminate ~ .c5 {
  border-color: #121212;
  background-color: #121212;
}

.c4:hover:not(:checked):not(:indeterminate):not(:disabled) ~ .c5 {
  border-color: #024ddf;
  border-width: 2px;
  background-color: #ffffff;
}

.c4:active:not(:checked):not(:indeterminate):not(:disabled) ~ .c5 {
  border-color: #0139a7;
  border-width: 2px;
}

.c4:hover:not(:disabled) ~ .c5,
.c4:indeterminate:hover:not(:disabled) ~ .c5 {
  border-color: #0139a7;
  background-color: #0139a7;
}

.c4:disabled:checked ~ .c5,
.c4:disabled:indeterminate ~ .c5 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c4:checked ~ .c5 > .c8 {
  display: block;
}

.c4:indeterminate ~ .c5 > .c10 {
  display: block;
}

.c13 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #121212;
}

.c2 {
  font-size: var(--rainier-font-size,16px);
  line-height: var(--rainier-line-height,22px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: -8px;
  color: #646464;
}

.c2 > * {
  padding: 8px;
}

.c12 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-top: auto;
  margin-bottom: auto;
  padding-inline-start: 4px;
}

.c3 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

@supports not selector(:focus-visible) {
  .c4:focus ~ .c5 {
    outline-width: 2px;
    outline-style: solid;
    outline-color: #024ddf;
    outline-offset: 2px;
  }
}

<div>
  <div
    class="c0"
    id="test-checkbox"
  >
    <label
      class="c1 c2"
      disabled=""
      for="test-checkbox-input"
    >
      <div
        class="c3"
      >
        <input
          aria-describedby="test-checkbox-error"
          aria-invalid="false"
          class="c4"
          disabled=""
          id="test-checkbox-input"
          type="checkbox"
        />
        <span
          class="c5 c6"
        >
          <svg
            aria-hidden="true"
            class="c7 c8 c9"
            focusable="false"
            height="73%"
            viewBox="0 0 24 24"
            width="73%"
          >
            <path
              d="M23 3.2 7 22l-6-5.94 1.41-1.32 4.46 4.42L21.47 2z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="c7 c10 c11"
            focusable="false"
            height="73%"
            viewBox="0 0 24 24"
            width="73%"
          >
            <path
              d="M1 11.25h22v1.5H1z"
            />
          </svg>
        </span>
      </div>
      <span
        class="c12"
      >
        Label
      </span>
    </label>
    <div
      class="c13"
      id="test-checkbox-error"
    />
  </div>
</div>
`;

exports[`Component: Checkbox -> should render disabled and checked 1`] = `
.c7 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c0:disabled {
  opacity: 0.5;
}

.c1 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: block;
  color: #646464;
  color: #949494;
  cursor: not-allowed;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  color: inherit;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  width: 100%;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #949494;
  color: #ffffff;
  cursor: pointer;
}

.c6:disabled {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c6:focus,
.c6:focus-visible {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
  outline-offset: -2px;
}

.c6::-webkit-input-placeholder {
  color: #646464;
}

.c6::-moz-placeholder {
  color: #646464;
}

.c6:-ms-input-placeholder {
  color: #646464;
}

.c6::placeholder {
  color: #646464;
}

.c9 {
  display: none;
}

.c11 {
  display: none;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4:disabled ~ .c5,
.c4:disabled:indeterminate ~ .c5 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c4:focus-visible ~ .c5 {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
}

.c4:checked ~ .c5,
.c4:indeterminate ~ .c5 {
  border-color: #121212;
  background-color: #121212;
}

.c4:hover:not(:checked):not(:indeterminate):not(:disabled) ~ .c5 {
  border-color: #024ddf;
  border-width: 2px;
  background-color: #ffffff;
}

.c4:active:not(:checked):not(:indeterminate):not(:disabled) ~ .c5 {
  border-color: #0139a7;
  border-width: 2px;
}

.c4:hover:not(:disabled) ~ .c5,
.c4:indeterminate:hover:not(:disabled) ~ .c5 {
  border-color: #0139a7;
  background-color: #0139a7;
}

.c4:disabled:checked ~ .c5,
.c4:disabled:indeterminate ~ .c5 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c4:checked ~ .c5 > .c8 {
  display: block;
}

.c4:indeterminate ~ .c5 > .c10 {
  display: block;
}

.c13 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #121212;
}

.c2 {
  font-size: var(--rainier-font-size,16px);
  line-height: var(--rainier-line-height,22px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: -8px;
  color: #646464;
}

.c2 > * {
  padding: 8px;
}

.c12 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-top: auto;
  margin-bottom: auto;
  padding-inline-start: 4px;
}

.c3 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

@supports not selector(:focus-visible) {
  .c4:focus ~ .c5 {
    outline-width: 2px;
    outline-style: solid;
    outline-color: #024ddf;
    outline-offset: 2px;
  }
}

<div>
  <div
    class="c0"
    id="test-checkbox"
  >
    <label
      class="c1 c2"
      disabled=""
      for="test-checkbox-input"
    >
      <div
        class="c3"
      >
        <input
          aria-describedby="test-checkbox-error"
          aria-invalid="false"
          checked=""
          class="c4"
          disabled=""
          id="test-checkbox-input"
          type="checkbox"
        />
        <span
          class="c5 c6"
        >
          <svg
            aria-hidden="true"
            class="c7 c8 c9"
            focusable="false"
            height="73%"
            viewBox="0 0 24 24"
            width="73%"
          >
            <path
              d="M23 3.2 7 22l-6-5.94 1.41-1.32 4.46 4.42L21.47 2z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="c7 c10 c11"
            focusable="false"
            height="73%"
            viewBox="0 0 24 24"
            width="73%"
          >
            <path
              d="M1 11.25h22v1.5H1z"
            />
          </svg>
        </span>
      </div>
      <span
        class="c12"
      >
        Label
      </span>
    </label>
    <div
      class="c13"
      id="test-checkbox-error"
    />
  </div>
</div>
`;
